# http_cli_webclient

./: README.md  pyproject.toml
data/: universities_with_geoip.csv
data/1_rtt/: universities.csv  universities_merged.csv  universities_with_coordinates.csv  universities_with_distance.csv  universities_with_geoip.csv  universities_with_rtt.csv
data/2_pkt/: mirrors.csv  mirrors_packet_stats.tex  mirrors_packets.csv  universities_packet_stats.tex  universities_packets.csv
data/3_tcp_info/: universities_tcp_info_table.tex  universities_with_tcp_info_rtt.csv
scripts/: 0_geolocate_universities.py  1_measure_RTT.py  2_geolocate_ip.py
scripts/1_rtt/: 1_geolocate_universities.py  2_measure_RTT.py  3_geolocate_ip.py  4_merge_table.py  5_ip_distance.py
scripts/2_pkt/: 1_measure_packet_size.py  2_plot_packets.py
scripts/3_tcp_info/: 1_measure_rtt.py  2_plot.py
src/webclient/: __init__.py  __main__.py
