[project]
name = "webclient"
version = "0.1.0"
description = "CS 513 Computer Networks - Project 2 - HTTP CLI Web Client"
authors = [{ name = "Javier Vela Tambo", email = "jvela@wpi.edu" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
webclient = "webclient.__main__:main"

[dependency-groups]
dev = [
    "adjusttext>=1.3.0",
    "haversine>=2.9.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "ruff>=0.13.0",
]
